<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:gravity="center"
	android:orientation="vertical" 
    android:layout_height="match_parent"
    android:background="@drawable/back_1" >

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/app_name"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/td_logo_back_sh_white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_developer"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/developer_names"
            android:textAppearance="?android:attr/textAppearanceLarge" />
</LinearLayout>