<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/back_2"
    android:orientation="vertical"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:textColor="@color/white" />

    </LinearLayout>

    
	<LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"  >

     	<Button
     	    android:id="@+id/menu"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
     	    android:layout_marginRight="5dp"
     	    android:text="@string/menu" />

     	<Button
     	    android:id="@+id/retry"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
       	    android:layout_marginRight="5dp"
     	    android:text="@string/retry" />

       	<Button
       	    android:id="@+id/next"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/next" />
	</LinearLayout>
</LinearLayout>